--- a/installation/language/en-GB/joomla.ini
+++ b/installation/language/en-GB/joomla.ini
@@ -139,39 +139,19 @@ INSTL_LANGUAGES_WARNING_NO_INTERNET2="Note: You will be able to install language
 INSTL_LANGUAGES_WARNING_BACK_BUTTON="Return to last installation step"
 
 ;Default language view
-INSTL_DEFAULTLANGUAGE_ACTIVATE_MULTILANGUAGE="Activate the multilingual feature"
-INSTL_DEFAULTLANGUAGE_ACTIVATE_MULTILANGUAGE_DESC="If active, your Joomla site will have the multilingual feature active with localised menus for each installed language."
-INSTL_DEFAULTLANGUAGE_ACTIVATE_LANGUAGE_CODE_PLUGIN="Enable the language code plugin"
-INSTL_DEFAULTLANGUAGE_ACTIVATE_LANGUAGE_CODE_PLUGIN_DESC="If enabled, the language code plugin will add the ability to change the language code in the generated HTML document to improve SEO."
 INSTL_DEFAULTLANGUAGE_ADMINISTRATOR="Default Administrator language"
 INSTL_DEFAULTLANGUAGE_ADMIN_COULDNT_SET_DEFAULT="Joomla was unable to set the language as default. English will be used as default language for the Backend Administrator."
 INSTL_DEFAULTLANGUAGE_ADMIN_SET_DEFAULT="Joomla has set %s as your default ADMINISTRATOR language."
 INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_SELECT="Select"
 INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_LANGUAGE="Language"
 INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_TAG="Tag"
-INSTL_DEFAULTLANGUAGE_COULD_NOT_ADD_ASSOCIATIONS="Joomla was unable to automatically create the language associations."
-INSTL_DEFAULTLANGUAGE_COULD_NOT_CREATE_CONTENT_LANGUAGE="Joomla was unable to automatically create the %s content language."
-INSTL_DEFAULTLANGUAGE_COULD_NOT_CREATE_MENU="Joomla was unable to automatically create the %s menu."
-INSTL_DEFAULTLANGUAGE_COULD_NOT_CREATE_MENU_ITEM="Joomla was unable to automatically create the %s home menu item."
-INSTL_DEFAULTLANGUAGE_COULD_NOT_CREATE_MENU_MODULE="Joomla was unable to automatically create the %s menu module."
-INSTL_DEFAULTLANGUAGE_COULD_NOT_CREATE_CATEGORY="Joomla was unable to automatically create the %s content category."
-INSTL_DEFAULTLANGUAGE_COULD_NOT_CREATE_ARTICLE="Joomla was unable to automatically create the %s localised article."
-INSTL_DEFAULTLANGUAGE_COULD_NOT_ENABLE_MODULESWHITCHER_LANGUAGECODE="Joomla was unable to automatically publish the language switcher module."
-INSTL_DEFAULTLANGUAGE_COULD_NOT_ENABLE_PLG_LANGUAGECODE="Joomla was unable to automatically enable the Language Code Plugin."
-INSTL_DEFAULTLANGUAGE_COULD_NOT_ENABLE_PLG_LANGUAGEFILTER="Joomla was unable to automatically enable the Language Filter Plugin."
 INSTL_DEFAULTLANGUAGE_COULD_NOT_INSTALL_LANGUAGE="Joomla was unable to install %s language."
-INSTL_DEFAULTLANGUAGE_COULD_NOT_INSTALL_MULTILANG="Joomla was unable to install the multilingual sample data as only one language is installed. To activate the multilingual feature, you need to install more languages, press the 'Previous' button and choose the desired languages from the list."
-INSTL_DEFAULTLANGUAGE_COULD_NOT_PUBLISH_MOD_MULTILANGSTATUS="Joomla was unable to automatically publish the language status module."
-INSTL_DEFAULTLANGUAGE_COULD_NOT_UNPUBLISH_MOD_DEFAULTMENU="Joomla was unable to automatically unpublish the default menu module."
-INSTL_DEFAULTLANGUAGE_DESC="Joomla has installed the following languages. Please select your desired default language for the Joomla Administrator."
-INSTL_DEFAULTLANGUAGE_DESC_FRONTEND="Joomla has installed the following languages. Please select your desired default language for the Joomla Frontend."
+INSTL_DEFAULTLANGUAGE_DESC="Joomla has installed the following languages. Please select your desired default language for the <strong>Joomla Administrator</strong>."
+INSTL_DEFAULTLANGUAGE_DESC_FRONTEND="Joomla has installed the following languages. Please select your desired default language for the <strong>Joomla Frontend</strong>."
 INSTL_DEFAULTLANGUAGE_FRONTEND="Default Site language"
 INSTL_DEFAULTLANGUAGE_FRONTEND_COULDNT_SET_DEFAULT="Joomla was unable to set the language as default. English will be used as default language for the Frontend SITE."
 INSTL_DEFAULTLANGUAGE_FRONTEND_SET_DEFAULT="Joomla has set %s as your default SITE language."
-INSTL_DEFAULTLANGUAGE_INSTALL_LOCALISED_CONTENT="Install localised content"
-INSTL_DEFAULTLANGUAGE_INSTALL_LOCALISED_CONTENT_DESC="If active, Joomla will automatically create one content category per each installed language. Also, one featured article with dummy content will be created in each category."
-INSTL_DEFAULTLANGUAGE_MULTILANGUAGE_TITLE="Multilingual"
-INSTL_DEFAULTLANGUAGE_MULTILANGUAGE_DESC="This section allows you to automatically activate the Joomla multilingual feature."
+INSTL_DEFAULTLANGUAGE_SET_DEFAULT_LANGUAGE="Set default language"
 INSTL_DEFAULTLANGUAGE_TRY_LATER="You will be able to install it later using the Joomla Administrator"
 
 ; IMPORTANT NOTE FOR TRANSLATORS: Do not literally translate this line, instead add the localised name of the language. For example Spanish will be Español
