--- a/administrator/language/en-GB/plg_user_token.ini
+++ b/administrator/language/en-GB/plg_user_token.ini
@@ -3,11 +3,11 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_USER_TOKEN="User - Joomla Token"
+PLG_USER_TOKEN="User - Joomla API Token"
 PLG_USER_TOKEN_ENABLED_DESC="Set to No to temporarily prevent access to your site with this token."
 PLG_USER_TOKEN_ENABLED_LABEL="Active"
 PLG_USER_TOKEN_GROUP_DESC="Manage the security tokens used for authenticating to the Joomla API application (remote access to your site). If you are not sure what this does chances are you don't need it and can safely ignore these settings."
-PLG_USER_TOKEN_GROUP_LABEL="Joomla Token"
+PLG_USER_TOKEN_GROUP_LABEL="Joomla API Token"
 PLG_USER_TOKEN_NOTOKENFOROTHERPEOPLE_DESC="You cannot see the token for users other than yourself. You can still enable, disable or reset their token e.g. when there is a suspicion their token has leaked to unauthorised persons."
 PLG_USER_TOKEN_RESET_DESC="Set to Yes and save your user profile to create a new token, replacing the old one."
 PLG_USER_TOKEN_RESET_LABEL="Reset"
