--- a/installation/language/en-US/joomla.ini
+++ b/installation/language/en-US/joomla.ini
@@ -116,14 +116,13 @@ INSTL_COMPLETE_REMOVE_FOLDER="Remove installation folder"
 INSTL_COMPLETE_REMOVE_INSTALLATION="PLEASE REMEMBER TO COMPLETELY REMOVE THE INSTALLATION FOLDER.<br>You will not be able to proceed beyond this point until the installation folder has been removed. This is a security feature of Joomla"
 INSTL_COMPLETE_CONGRAT="Congratulations!"
 INSTL_COMPLETE_TITLE="Congratulations! Your Joomla site is ready."
-INSTL_COMPLETE_DESC="You now have the option to customize your installation by adding another language."
 INSTL_COMPLETE_FINISH="Finish Installation Process"
 INSTL_COMPLETE_INSTALL_LANGUAGES="Extra steps: Install languages"
 INSTL_COMPLETE_SITE_BTN="Complete & Open Site"
 INSTL_COMPLETE_ADMIN_BTN="Complete & Open Admin"
 INSTL_COMPLETE_FINAL="Installation is Complete"
 INSTL_COMPLETE_FINAL_DESC="Your Joomla installation is now complete and ready to use."
-INSTL_COMPLETE_ADD_PRECONFIG="Customize Installation"
+INSTL_COMPLETE_ADD_EXTRA_LANGUAGE="Install Additional Languages"
 INSTL_REMOVE_INST_FOLDER="Are you sure you want to delete? Confirming will permanently delete the installation folder."
 
 ;Languages view
