--- a/language/en-GB/lib_joomla.ini
+++ b/language/en-GB/lib_joomla.ini
@@ -54,6 +54,7 @@ JLIB_APPLICATION_ERROR_REORDER_FAILED="Reorder failed. Error: %s"
 JLIB_APPLICATION_ERROR_ROUTER_LOAD="Unable to load router: %s"
 JLIB_APPLICATION_ERROR_RUN_TRANSITION="Unable to run transition."
 JLIB_APPLICATION_ERROR_SAVE_FAILED="Save failed with the following error: %s"
+JLIB_APPLICATION_ERROR_SAVE_FAILED_FILE="An error has occurred while saving the file."
 JLIB_APPLICATION_ERROR_SAVE_NOT_PERMITTED="Save not permitted."
 JLIB_APPLICATION_ERROR_SERVER="Internal server error."
 JLIB_APPLICATION_ERROR_TABLE_NAME_NOT_SUPPORTED="Table %s not supported. File not found."
