--- a/administrator/language/en-GB/com_users.ini
+++ b/administrator/language/en-GB/com_users.ini
@@ -42,9 +42,9 @@ COM_USERS_CONFIG_FIELD_FRONTEND_USERPARAMS_LABEL="Frontend User Parameters"
 COM_USERS_CONFIG_FIELD_GUEST_USER_GROUP_LABEL="Guest User Group"
 COM_USERS_CONFIG_FIELD_MAILBODY_SUFFIX_LABEL="Mailbody Suffix"
 COM_USERS_CONFIG_FIELD_MAILTOADMIN_LABEL="Send Mail to Administrators"
-COM_USERS_CONFIG_FIELD_MINIMUM_INTEGERS="Minimum Integers"
+COM_USERS_CONFIG_FIELD_MINIMUM_INTEGERS="Minimum Digits"
 COM_USERS_CONFIG_FIELD_MINIMUM_LOWERCASE="Minimum Lower Case"
-COM_USERS_CONFIG_FIELD_MINIMUM_PASSWORD_LENGTH="Minimum Length"
+COM_USERS_CONFIG_FIELD_MINIMUM_PASSWORD_LENGTH="Minimum Characters"
 COM_USERS_CONFIG_FIELD_MINIMUM_SYMBOLS="Minimum Symbols"
 COM_USERS_CONFIG_FIELD_MINIMUM_UPPERCASE="Minimum Upper Case"
 COM_USERS_CONFIG_FIELD_NEW_USER_TYPE_LABEL="New User Registration Group"
