--- a/administrator/language/en-GB/mod_menu.ini
+++ b/administrator/language/en-GB/mod_menu.ini
@@ -61,14 +61,16 @@ MOD_MENU_HELP_EXTENSIONS="Joomla! Extensions"
 MOD_MENU_HELP_GITHUB="Joomla on GitHub"
 MOD_MENU_HELP_ISSUES_TRACKER="Issue Tracker"
 MOD_MENU_HELP_JOOMLA="Joomla! Help"
-MOD_MENU_HELP_PARENT_FIND_HELP="Find Help"
+MOD_MENU_HELP_PARENT_FIND_HELP="Additional Help"
 MOD_MENU_HELP_PARENT_GET_INVOLVED="Get Involved"
 MOD_MENU_HELP_PARENT_MEET_JOOMLERS="Meet Joomlers"
 MOD_MENU_HELP_PARENT_NEWS="News"
 MOD_MENU_HELP_PARENT_RESOURCES="Resources"
+MOD_MENU_HELP_PARENT_START_HERE="Start Here"
 MOD_MENU_HELP_RESOURCES="Joomla! Resources"
 MOD_MENU_HELP_SECURITY="Security Centre"
 MOD_MENU_HELP_SHOP="Joomla! Shop"
+MOD_MENU_HELP_PARENT_START_HERE="Start Here"
 ; The string below will be used if the localised sample data has a URL for the desired community forum or if the 'Custom Support Forum' field parameter in the Administrator Menu module has a URL
 MOD_MENU_HELP_SUPPORT_CUSTOM_FORUM="Custom Support Forum"
 MOD_MENU_HELP_SUPPORT_OFFICIAL_FORUM="Official Support Forum"
