--- a/language/en-GB/com_finder.ini
+++ b/language/en-GB/com_finder.ini
@@ -32,11 +32,14 @@ COM_FINDER_QUERY_FILTER_BRANCH_VENUE="venue"
 COM_FINDER_QUERY_OPERATOR_AND="and"
 COM_FINDER_QUERY_OPERATOR_NOT="not"
 COM_FINDER_QUERY_OPERATOR_OR="or"
+COM_FINDER_QUERY_RESULTS="the following <a href=\"#search-result-list\">%s results were found</a>."
+COM_FINDER_QUERY_RESULTS_0="no results were found. <a href=\"#q\">Search again</a>."
+COM_FINDER_QUERY_RESULTS_1="the following %s result was found."
 COM_FINDER_QUERY_START_DATE="beginning date <span class=\"when\">%s</span> <span class=\"date\">%s</span>"
 COM_FINDER_QUERY_TAXONOMY_NODE="with <span class=\"node\">%s</span> as <span class=\"branch\">%s</span> "
 COM_FINDER_QUERY_TOKEN_EXCLUDED="<span class=\"term\">%s</span> should be excluded"
 COM_FINDER_QUERY_TOKEN_GLUE=", and "
-COM_FINDER_QUERY_TOKEN_INTERPRETED="Assuming %s, the following results were found."
+COM_FINDER_QUERY_TOKEN_INTERPRETED="Assuming %s, %s"
 COM_FINDER_QUERY_TOKEN_OPTIONAL="<span class=\"term\">%s</span> is optional"
 COM_FINDER_QUERY_TOKEN_REQUIRED="<span class=\"term\">%s</span> is required"
 COM_FINDER_SEARCH_NO_RESULTS_BODY="No search results could be found for query: %s."
