--- a/language/en-GB/joomla.ini
+++ b/language/en-GB/joomla.ini
@@ -202,6 +202,12 @@ JFIELD_PASSWORD_NOT_ENOUGH_UPPERCASE_LETTERS_N="Password does not have enough up
 JFIELD_PASSWORD_NOT_ENOUGH_UPPERCASE_LETTERS_N_1="Password does not have enough upper case characters. At least 1 upper case character is required."
 JFIELD_PASSWORD_NOTE_DESC="%1 symbol(s), %2 uppercase letter(s), %3 lowercase letter(s), %4 number(s)"
 JFIELD_PASSWORD_NOTE_LBL="Password must contain:"
+JFIELD_PASSWORD_RULES_CHARACTERS="Characters: %d"
+JFIELD_PASSWORD_RULES_DIGITS="Digits: %d"
+JFIELD_PASSWORD_RULES_LOWERCASE="Lower Case: %d"
+JFIELD_PASSWORD_RULES_MINIMUM_REQUIREMENTS="<strong>Minimum Requirements</strong> — %s"
+JFIELD_PASSWORD_RULES_SYMBOLS="Symbols: %d"
+JFIELD_PASSWORD_RULES_UPPERCASE="Upper Case: %d"
 JFIELD_PASSWORD_SPACES_IN_PASSWORD="Password must not have spaces at the beginning or end."
 JFIELD_PASSWORD_TOO_LONG="Password is too long. Passwords must be less than 100 characters."
 JFIELD_PASSWORD_TOO_SHORT_N="Password is too short. Passwords must have at least %s characters."
