--- a/language/en-GB/com_finder.ini
+++ b/language/en-GB/com_finder.ini
@@ -34,7 +34,7 @@ COM_FINDER_QUERY_OPERATOR_NOT="not"
 COM_FINDER_QUERY_OPERATOR_OR="or"
 COM_FINDER_QUERY_RESULTS="Assuming %2$s, the following <a href=\"#search-result-list\">%d results were found.</a>"
 COM_FINDER_QUERY_RESULTS_0="Assuming %2$s, no results were found. <a href=\"#q\">Search again.</a>"
-COM_FINDER_QUERY_RESULTS_1="Assuming %2$s, the following 1 result was found."
+COM_FINDER_QUERY_RESULTS_1="Assuming %2$s, the following result was found."
 COM_FINDER_QUERY_START_DATE="beginning date <span class=\"when\">%s</span> <span class=\"date\">%s</span>"
 COM_FINDER_QUERY_TAXONOMY_NODE="with <span class=\"node\">%s</span> as <span class=\"branch\">%s</span> "
 COM_FINDER_QUERY_TOKEN_EXCLUDED="<span class=\"term\">%s</span> should be excluded"
